--- a/DemoSearchEngine/wwwroot/css/site.css
+++ b/DemoSearchEngine/wwwroot/css/site.css
@@ -69,3 +69,29 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.fan-autocomplete-item {
+    font-size: 14px;
+    font-weight: 700;
+    padding: 3px 0;
+    text-transform: uppercase;
+}
+
+.fan-autocomplete-category {
+    border-top: 1px solid #CCC;
+    padding: 15px;
+}
+
+.fan-autocomplete-heading {
+    cursor: default;
+    font-family: alternate-gothic-no-1-d,"Futura Condensed","Arial Narrow",Arial,sans-serif;
+    font-size: 26px;
+    line-height: 1;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+}
+
+.cta {
+    color: #4AA7f6;
+    transition: color .3s linear;
+}
