--- a/DemoSearchEngine/Views/Shared/Components/SearchWidget/Default.cshtml
+++ b/DemoSearchEngine/Views/Shared/Components/SearchWidget/Default.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<SearchResult>
+
     <div class="container">
         @{
             var result_by_category = Model.GroupBy(x => x.Category).ToList();
@@ -10,7 +11,7 @@
                     @foreach (var result in category)
                     {
                        <li class="fan-autocomplete-item cta">
-                           <a asp-controller="Movie" asp-action="Index" asp-route-id="@result.ID"> @result.Name</a>
+                           <a asp-controller="Home" asp-action="Details" asp-route-id="@result.ID"> @result.Name</a>
                        </li>
                     }
                 </ul>
